# rift

./: .gitignore  LICENSE  README.md
bridge/: Cargo.toml
bridge/src/: discord_types.rs  gateway.rs  mapper.rs
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.svelte  app.css
client/src/lib/: api.ts  gateway.ts  types.ts
client/src/lib/components/: AuthPage.svelte  ChannelSidebar.svelte  ChatArea.svelte  DmView.svelte  MemberList.svelte  MessageInput.svelte  MessageItem.svelte  Modals.svelte  ServerSidebar.svelte  UserSettings.svelte
client/src/lib/stores/: auth.ts  messages.ts  servers.ts  ui.ts
server/: Cargo.toml
server/migrations/: 001_initial.sql  002_bridge.sql
server/src/: config.rs  error.rs  lib.rs  main.rs
server/src/auth/: jwt.rs  middleware.rs
server/src/db/: mod.rs
server/src/models/: attachment.rs  channel.rs  message.rs  mod.rs  permissions.rs  role.rs  server.rs  user.rs
server/src/routes/: auth.rs  channels.rs  messages.rs  mod.rs  roles.rs  servers.rs  upload.rs  users.rs
server/src/ws/: gateway.rs
